[tool.poetry]
name = "liquor-store-server"
version = "0.1.0"
description = ""
authors = ["César Montoya <cesara.montoya1@udea.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.1.0"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
