[tool.poetry]
name = "liquor-store-server"
version = "0.1.0"
description = ""
authors = ["César Montoya <cesara.montoya1@udea.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
rich-pixels = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
